--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8083
+spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery= Select 1
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
